--- a/RegionalText/2021/CC/DataCollectionPrograms.tex
+++ b/RegionalText/2021/CC/DataCollectionPrograms.tex
@@ -15,4 +15,4 @@ Two dive charter vessels operated in the CC:
 Five gillnet sounding vessels were operated by the Heiltsuk Nation this season;
 most effort was focused in Statistical Area 07, as well as
 effort in Statistical Area 08 to assist in locating fish
-for spawn on kelp (SOK) operations.
+for spawn-on-kelp (SOK) operations.
