--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -36,6 +36,8 @@
 \Sexpr{tfSpatialGroup}
 \newtoggle{specialRegion} % Is this a special region
 \Sexpr{tfSpecialRegion}
+\newtoggle{showCatchZoom} % Show zoom area for catch
+\Sexpr{tfShowCatchZoom}
 
 % Location of the pdf figures (generated in R)
 \graphicspath{{\Sexpr{noquote(rPath)}}}
