Tidy general obs CC

--- a/RegionalText/2021/CC/GeneralObservations.tex
+++ b/RegionalText/2021/CC/GeneralObservations.tex
@@ -1,14 +1,15 @@
 \begin{itemize}
-\item Herring behaviour different than previous seasons;
-spawn in different areas and apparent lower amount of spawn in Spiller Channel.
+\item Herring behaviour was different than in previous seasons.
+For example, spawn was observed in different areas and
+there appeared to be less spawn in Spiller Channel.
 However, the dive survey indicated only slightly less than observed.
-\item Cold weather, colder surface water temperatures noted.
+\item Compared to previous years, the weather and water temperature was colder.
 \item Continued COVID-19 precautions meant that CC Resource Management staff
-were not able to be on the grounds during the assessment activities.
+were unable to be on the grounds for assessment activities.
 \item Reliable communication methods remain a challenge in the Central Coast.
 With satellite phone inconsistencies and the inability to use the DFO radio network,
 there were limited communications with herring test vessels.
-\item Priorities for the 2022 season will be to establish reliable communication methods,
+\item Priorities for 2022 are to establish reliable communication methods,
 as well as re-establish DFO Resource Management presence on the management platform, 
 and Heiltsuk/DFO presence on spawn flights.
 \end{itemize}
