--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -49,7 +49,7 @@
 \newcommand{\plusGroup}{The age-\Sexpr{max(ageRange)} class is a `plus group' which includes fish ages \Sexpr{max(ageRange)} and older.}
 \newcommand{\spawnIndex}{The `spawn index' is not scaled by the spawn survey scaling parameter, $q$.}
 \newcommand{\trendLine}{The thick black line is a \Sexpr{smLine} curve, and the shaded area is the \Sexpr{ciLevel*100}\% confidence interval.}
-\newcommand{\qPeriods}{The spawn index has two distinct periods defined by the dominant survey method: surface surveys (\Sexpr{qYrs$q1}), and dive surveys (\Sexpr{qYrs$q2}).}
+\newcommand{\qPeriods}{The spawn index has two distinct periods defined by the dominant coastwide survey method: surface surveys (\Sexpr{qYrs$q1}), and dive surveys (\Sexpr{qYrs$q2}).}
 \newcommand{\legendNear}{Legend: `Nearshore' refers to samples collected using cast nets as part of a pilot study with First Nations.}
 \newcommand{\legendGear}{Legend: `Other' represents the reduction (\Sexpr{min(yrRange)} to \Sexpr{lastRedYr} only), the food and bait, as well as the special use fishery; `RoeSN' represents the roe seine fishery; and `RoeGN' represents the roe gillnet fishery.}
 \newcommand{\darkThisYr}{The year \thisYr{} has a darker bar to facilitate interpretation.}
@@ -61,24 +61,8 @@
 \newcommand{\pctChange}[1]{Percent change is $\delta_t=\frac{\alpha_t - \alpha_{t-1}}{\alpha_{t-1}}$ where $\alpha_t$ is the #1 in year $t$.}
 \newcommand{\spawnSurfDive}{Note that spawn surveys in the dive survey period (\Sexpr{qYrs$q2}) are a combination of surface and dive surveys (Figures \ref{figSpawnIndexType} and \ref{figSpawnTypeProp}).}
 \newcommand{\covid}{\section{COVID-19 pandemic}
-\subsection{Data collection and analysis in 2020}
-The COVID-19 pandemic impacted our ability to collect and analyse Pacific Herring data throughout British Columbia in 2020.
-The pandemic and associated provincial response changed rapidly during the Pacific Herring field program season.
-Despite these challenges, surveyors assessed all major observed spawns in the \Sexpr{length(allRegions$major)} major stock assessment regions (SARs).
-However, these changes impacted our ability to assess spawn in SARs with later spawns more than SARs with earlier spawns.
-For example, spawns were surveyed by surface surveys instead of underwater dive surveys in Prince Rupert District and Haida Gwaii.\par
-Although Pacific Herring biological samples were collected as usual, the pandemic delayed the analysis of biological data for all SARs.
-This delay was most notable for age data which are analysed at the sclerochronology lab at the Pacific Biological Station.
-This lab closed on March \nth{16}, and resumed limited ageing analysis on July \nth{6}.
-This resulted in delayed provision of age data for Pacific Herring and many other species.
-Despite these delays, biological data was available for use in the 2020 stock assessment.
-% To address this backlog efficiently, senior science staff and fisheries managers at DFO prioritized species to analyse in the sclerochronology lab.\par
-% We now have biological data for Pacific Herring in 2020.
-% This updated version of the report contains biological data that was absent from the previous version.
-% We appreciate your patience and understanding as we continue to work from home in these uncertain and changing times.
-\subsection{Data collection and analysis in 2021}
 Compared to 2020, the COVID-19 pandemic had fewer impacts to Pacific Herring data collection and analysis in 2021.
-Spawn surveys proceeded as usual in most areas, with dive surveys in all major areas except Haida Gwaii.
+Spawn surveys proceeded as usual in most areas in 2021, with dive surveys in all major areas except Haida Gwaii.
 Haida Gwaii would normally have a dive survey, but had surface surveys in 2021 due to COVID-19.
 The collection and analysis of biological data was not affected by the COVID-19 pandemic in 2021.}
 \newcommand{\specialRegion}{Note that special SARs are unofficial SARs; they are excluded in regular monitoring and analyses.}
