--- a/RegionalText/2021/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2021/SoG/DataCollectionPrograms.tex
@@ -19,7 +19,7 @@ Four dive charter vessels operated in the SoG:
 \end{itemize}
 The first three dive vessels and the seine charter vessel ``Denman Isle''
 were funded by DFO, through a contract to the Herring Conservation Research Society.
-DFO mentored A-Tlegay divers for the spawn survey protocol in 2017 and 2019;
+DFO mentored A-Tlegay Fisheries Society divers for the spawn survey protocol in 2017 and 2019;
 in 2021, A-Tlegay divers surveyed spawn through a contract with the DFO.
 Additional sampling and sounding efforts conducted through the
 Industry Test Program were contributed in-kind by the Herring Industry.
