Minor edits to text

--- a/RegionalText/2021/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2021/SoG/DataCollectionPrograms.tex
@@ -15,11 +15,11 @@ Four dive charter vessels operated in the SoG:
 \item The ``Viking Spirit'' surveyed 21 days from March \nth{16} to April \nth{5},
 \item The ``Ocean Cloud'' surveyed 12 days from March \nth{15} to March \nth{26},
 \item The ``Seaveyor'' surveyed 3 days from March \nth{11} and March \nth{13}, and
-\item A-Tlegay divers surveyed 5 days from March \nth{10} to April \nth{23}.
+\item Divers with A-Tlegay Fisheries Society surveyed 5 days from March \nth{10} to April \nth{23}.
 \end{itemize}
 The first three dive vessels and the seine charter vessel ``Denman Isle''
 were funded by DFO, through a contract to the Herring Conservation Research Society.
 DFO mentored A-Tlegay Fisheries Society divers for the spawn survey protocol in 2017 and 2019;
-in 2021, A-Tlegay divers surveyed spawn through a contract with the DFO.
+in 2021, these divers surveyed spawn through a contract with DFO.
 Additional sampling and sounding efforts conducted through the
 Industry Test Program were contributed in-kind by the Herring Industry.
