--- a/RegionalText/2021/PRD/GeneralObservations.tex
+++ b/RegionalText/2021/PRD/GeneralObservations.tex
@@ -13,6 +13,7 @@ towards Joachim point and in front of Kitkatla Village.
 greatly increased the capacity to assess the areas.
 
 \item Spawn occurred simultaneously throughout the assessment area.
+\item Perception of overall length of spawn is that it was below average.
 \item Good layers (6 to 8) observed from Big Bay south to Ryan Pt.
 \item No spawning observed at the north end of Porcher or Tugwell Island.
 \item Due to the late spawn,
