Two GNN surveys

--- a/RegionalText/2021/A10/DataCollectionPrograms.tex
+++ b/RegionalText/2021/A10/DataCollectionPrograms.tex
@@ -1,1 +1,2 @@
-The DFO dive crew surveyed A10 for one day this year, on April \nth{14}.
+The Gwa'sala-'Nakwaxda'xw Nation dive crew surveyed two spawn events this year
+(March \nth{17} \& \nth{18} and April \nth{07} & \nth{07}.
