--- a/RegionalText/2021/A10/GeneralObservations.tex
+++ b/RegionalText/2021/A10/GeneralObservations.tex
@@ -1,6 +1,4 @@
 \begin{itemize}
-\item Because the DFO dive crew surveyed A10 for one day this year,
-the survey was likely not a complete survey of the spawn in this area.
-\item This data summary does not include spawn survey data collected by the
-Gwa'sala-'Nakwaxda'xw Nation.
+\item The Gwa'sala-'Nakwaxda'xw Nation dive crew surveyed two spawn events this year
+(March \nth{17} \& \nth{18} and April \nth{07} & \nth{07}.
 \end{itemize}
