Add SoG observations

--- a/RegionalText/2022/SoG/GeneralObservations.tex
+++ b/RegionalText/2022/SoG/GeneralObservations.tex
@@ -1,3 +1,27 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item Late February, as well as early and mid-March had strong winds
+which impacted the effectiveness of the assessment program.
+
+\item Spawn in the Strait of Georgia was observed
+along the East coast of Vancouver Island from Kitty Coleman south to Union Point,
+on the East coast of Denman Island from White Spit to Komas Bluff,
+around most of Hornby Island,
+and from Bowser to the Little Qualicum River.
+South of Little Qualicum River there were small spawns
+at Lock Bay on Gabriola and at Round Island south of Dodd Narrows. 
+
+\item Additional spawn was reported in Areas 13, 15, 16, and 19 (Esquimalt Harbour).
+
+\item Overall fishery timing was average for 2022.
+
+\item The majority of spawning occurred between March \nth{2} and \nth{7}
+after multiple days of high winds and rough seas.
+
+\item The overall length of spawn observed during the flight program
+was below average when compared with recent years.
+
+\item The sea lion population in the Strait of Georgia during the herring season
+continues to impact the ability to obtain biological samples in some areas and times.
+
 \end{itemize}
