--- a/RegionalText/2022/SoG/GeneralObservations.tex
+++ b/RegionalText/2022/SoG/GeneralObservations.tex
@@ -11,7 +11,13 @@ and from Bowser to the Little Qualicum River.
 South of Little Qualicum River there were small spawns
 at Lock Bay on Gabriola and at Round Island south of Dodd Narrows. 
 
-\item Additional spawn was reported in Areas 13, 15, 16, and 19 (Esquimalt Harbour).
+\item Additional spawn was reported in Areas 13, 15, 16, 19, and 28.
+
+\item Spawns recorded in Esquimalt Harbour and Esquimalt Lagoon
+(last observed in 1993 and 1950, respectively).
+
+\item Spawn recorded at Kiddie Point and Blubber Bay
+on Texada Island (first records at these locations).
 
 \item Overall fishery timing was average for 2022.
 
