Add WCVI observations

--- a/RegionalText/2022/WCVI/GeneralObservations.tex
+++ b/RegionalText/2022/WCVI/GeneralObservations.tex
@@ -1,3 +1,28 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item Good coverage of the spawns in terms of cast net sampling by First Nation charters.
+
+\item There were spawns close to communities which allowed better FSC access.
+For example, there were spawns inside of Nootka in front of Yuquot,
+in Hotsprings Cove, and in front of Tofino.
+
+\item Good communication and observations by First Nation charters
+helped with a successful spawn survey this year.
+
+\item Like last year, there was a long spawn in Hesquiat Harbour.
+
+\item There was a later spawn in Barkley Sound that was fairly long.
+
+\item In Area 25 especially, early spawn timing may have limited test boat access.
+As well, the fish seemed to be close to the beach and ready to spawn but
+the seine boat was unable to catch them.
+
+\item Limited resources truncated the number of reconnaisance flights.
+
+\item Inclement weather interfered with test vessel operations.
+For example, strong winds and swell prevented a dive survey
+on spawn observed at outer Nootka Island.
+
+\item COVID-19 continues to be a challenge.
+
 \end{itemize}
