--- a/RegionalText/2022/A27/GeneralObservations.tex
+++ b/RegionalText/2022/A27/GeneralObservations.tex
@@ -1,3 +1,11 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item No spawns were reported by residents or Quatsino Nation.
+
+\item The only reported spawn was from satellite images on March \nth{7},
+which appears to show spawn in Grant Bay.
+
+\item Dive surveys were not possible due to COVID-19 delays and
+the need to prioritize spawn surveys in the major WCVI region.
+
 \end{itemize}
