Observations for A2W, HG, and PRD

--- a/RegionalText/2022/A2W/GeneralObservations.tex
+++ b/RegionalText/2022/A2W/GeneralObservations.tex
@@ -1,3 +1,21 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item Sounding estimates were much lower than the previous two years,
+however sounding in outer Port Louis was hampered by a large swell and
+the test vessel skipper felt they might have been a little too early.
+
+\item As in previous years, the majority of spawn was in the Port Louis area
+with only trace amounts identified in Port Chanal and other areas to the south.
+
+\item Spawn in the Port Louis area was limited to the entire shore of inner Port Louis
+but was not as heavy as 2020.
+There was no spawn observed in Otard Bay in 2022.
+
+\item Due to very difficult weather conditions and time constraints
+neither the seine test vessel nor the surface survey vessel
+were able to assess the Englefield Bay area.
+
+\item No whales were observed in Area 2W in 2022 and
+abundance of pinnipeds appeared to be lower than the previous two years.
+
 \end{itemize}
