--- a/RegionalText/2022/HG/GeneralObservations.tex
+++ b/RegionalText/2022/HG/GeneralObservations.tex
@@ -1,3 +1,27 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item Major stock assessment area sounding estimates
+were similar to 2021 but spawn abundance (area and number of layers)
+appeared to be considerably lower than the previous two years.
+
+\item Water temperatures (test setting vessel) were similar to the previous two years.
+
+\item Spawn timing was several days earlier than in 2021
+and closer to the historical average.
+
+\item Once again, the main spawning concentrations were in Skincuttle Inlet
+and around Burnaby Island with only one smaller spawn
+occurring in Juan Perez Sound (Sedgwick Bay).
+
+\item Observations suggested fewer whales (Humpback and Gray)
+and Sea Lions were present than in 2021.
+
+\item Although less Humpback whales were present than in 2021
+they were very focused on the limited number of pre-spawning aggregations,
+which limited test setting opportunities.
+
+\item All observed spawns in the major area were assessed by dive and
+independent video assessments of 87 duplicate transects
+were also completed by the recon vessel to help calibrate the two methodologies.
+
 \end{itemize}
