--- a/RegionalText/2022/PRD/GeneralObservations.tex
+++ b/RegionalText/2022/PRD/GeneralObservations.tex
@@ -19,3 +19,24 @@ Spawning occurred slowly over the season opposed to the warmer sea temperatures 
 \item Overall length of spawn was shorter, but the layers were thicker.
 
 \end{itemize}
+
+Non-Big Bay:
+
+\begin{itemize}
+
+\item Water temperature was colder than recent years but warmer than Big Bay (about 6$^\circ\text{C}$).
+
+\item Significant and consistent storm activity over the duration of the test fishery and dive survey.
+
+\item Large schools observed in the inlet and tended to congregate in large schools
+close to the bottom and the beaches.
+Fish appeared longer and larger in the test sets than in recent years.
+
+\item There was an observed increase in sea lion abundance and activity throughout the area.
+
+\item Spawn appeared to commence at the end of March and was distributed
+throughout the inlet and along the outside from Cape George towards Oval Point.
+
+\item Reports of reduced kelp coverage throughout the area.
+
+\end{itemize}
