Add CC observations

--- a/RegionalText/2022/CC/GeneralObservations.tex
+++ b/RegionalText/2022/CC/GeneralObservations.tex
@@ -1,3 +1,21 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+
+\item Compared to previous years,
+colder water temperatures were reported throughout CC.
+
+\item Consistently poor weather conditions affected overflight schedules and
+management platform logistics.
+
+\item In general, spawn duration was shorter and less consistent
+than in previous years.
+
+\item Spawn was less concentrated and began much later in southern areas of the CC.
+
+\item A lack of reliable communication tools between
+the management and test platforms made sending and receiving
+the most up-to-date information challenging.
+
+\item Due to continuing COVID precautions in Bella Bella,
+all overflights had to be based out of Port Hardy.
+
 \end{itemize}
