Add \boat command

--- a/Document/HerringSummary.sty
+++ b/Document/HerringSummary.sty
@@ -53,6 +53,9 @@
 % Name appendix (for hyperref)
 \newcommand*{\Appendixautorefname}{Appendix}
 
+% Format vessel names
+\newcommand{\boat}[1]{\emph{#1}}
+
 % Allow wide tables/figures to spill into both margins equally: \centerfloat
 \makeatletter
 \newcommand*{\centerfloat}{%
