--- a/RegionalText/2021/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2021/SoG/DataCollectionPrograms.tex
@@ -14,7 +14,7 @@ Four dive charter vessels operated in the SoG:
 \begin{itemize}
 \item The ``Viking Spirit'' surveyed 21 days from March \nth{16} to April \nth{5},
 \item The ``Ocean Cloud'' surveyed 12 days from March \nth{15} to March \nth{26},
-\item The ``Seaveyor'' surveyed 3 days from March \nth{11} and March \nth{13}, and
+\item The ``Seaveyor'' surveyed 3 days from March \nth{11} to March \nth{13}, and
 \item Divers with A-Tlegay Fisheries Society surveyed 5 days from March \nth{10} to April \nth{23}.
 \end{itemize}
 The first three dive vessels and the seine charter vessel ``Denman Isle''
