Add 2022 data collection programs

--- a/RegionalText/2022/A2W/DataCollectionPrograms.tex
+++ b/RegionalText/2022/A2W/DataCollectionPrograms.tex
@@ -1,1 +1,8 @@
-No observations for \thisYr{}.
+In 2022, biological samples were collected by the \boat{Queens Reach},
+a seine test charter vessel funded by DFO.
+The \boat{Queens Reach} collected biological samples from main bodies of herring
+in Haida Gwaii and Area 2 West, identified from soundings.
+The \boat{Atlas} completed a 6 day surface survey charter in Area 2 West
+from April \nth{5} to \nth{10}.
+Both vessels were funded by DFO,
+through a contract to the Herring Conservation Research Society.
