--- a/RegionalText/2022/CC/DataCollectionPrograms.tex
+++ b/RegionalText/2022/CC/DataCollectionPrograms.tex
@@ -1,1 +1,27 @@
-No observations for \thisYr{}.
+In 2022, the data collection program in the Central Coast
+reflected a number of collaborations between
+DFO, the Heiltsuk Nation, and the Herring Industry.
+Biological samples were collected by the seine test charter vessel
+\boat{Ocean Venture} for 22 days from March \nth{12} to April \nth{5}.
+The primary purpose of the test charter vessel was to
+collect biological samples from main bodies of herring in
+Statistical Areas 06, 07, and 08, identified from soundings.
+Heiltsuk and Kitasoo Nations collected 15 nearshore
+cast net herring samples in 2022.
+Herring spawn locations were primarily identified with fixed-wing overflights.
+Seven spawn flights were conducted this season, in mid-March to mid-April.
+
+Two dive charter vessels operated in the CC:
+
+\begin{itemize}
+
+\item The \boat{Pachena No.1} surveyed 21 days from April \nth{4} to April \nth{24}, and
+
+\item The \boat{Ocean Cloud} surveyed 12 days from April \nth{4} to April \nth{15}.
+
+\end{itemize}
+
+Five gillnet sounding vessels were operated by the Heiltsuk Nation this season;
+most effort was focused in Statistical Area 07,
+as well as effort in Statistical Area 08
+to assist in locating fish for spawn-on-kelp (SOK) operations.
