--- a/RegionalText/2022/HG/DataCollectionPrograms.tex
+++ b/RegionalText/2022/HG/DataCollectionPrograms.tex
@@ -1,1 +1,15 @@
-No observations for \thisYr{}.
+In 2022, biological samples were collected by the \boat{Queens Reach},
+a seine test charter vessel funded by DFO.
+The primary purpose of the test charter vessel was to
+collect biological samples from main bodies of herring
+from Haida Gwaii major (priority) and Area 2W minor stock areas,
+identified from soundings.
+The \boat{Queens Reach} operated a 25 day charter
+from March \nth{9} to April \nth{2},
+collecting samples from HG and Area 2 West.
+The \boat{Haida Spirit} operated an 18 day dive charter
+from April \nth{8} to April \nth{25}.
+The \boat{Victoria Rose} operated a spawn reconnaissance charter
+for 19 days from April \nth{1} to April \nth{19}
+with some surface survey and drop-camera survey work.
+All vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
