--- a/RegionalText/2022/PRD/DataCollectionPrograms.tex
+++ b/RegionalText/2022/PRD/DataCollectionPrograms.tex
@@ -1,1 +1,21 @@
-No observations for \thisYr{}.
+In 2022, biological samples were collected by two seine test vessels:
+
+\begin{itemize}
+
+\item The \boat{Nita Maria} collected samples in Big Bay for 13 days
+from March \nth{15} to March \nth{27}, and
+
+\item The \boat{Viking Leader} collected samples in Kitkatla for 13 days
+from March \nth{15} to March \nth{27}.
+
+\end{itemize}
+
+The primary purpose of the test charter vessels was to collect biological samples
+from main bodies of herring from Big Bay and Kitkatla,
+identified from soundings.
+The dive charter vessel \boat{Royal Pride} surveyed spawn for 20 days
+from March \nth{30} to April \nth{18}.
+Herring spawn locations were primarily identified with fixed-wing overflights.
+Two spawn flights were conducted this season on March \nth{30} and April \nth{5}.
+All three charter vessels were funded by DFO,
+through a contract to the Herring Conservation Research Society.
