--- a/RegionalText/2022/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2022/SoG/DataCollectionPrograms.tex
@@ -1,1 +1,30 @@
-No observations for \thisYr{}.
+In 2022, biological samples were collected by the seine charter vessel
+\boat{Denman Isle} for 27 days from February \nth{20} to March \nth{18}.
+Two additional Industry test vessels collected biological samples
+between February \nth{28} to March \nth{15}.
+The primary purpose of the test charter vessel was to
+collect biological samples from main aggregations of herring in the SoG,
+as identified from soundings within the SAR boundary.
+
+Herring spawn locations were primarily identified with fixed-wing overflights
+conducted by DFO Resource Management and Science staff.
+Twelve flights were conducted this season, between February and March.
+
+Four dive charter vessels operated in the SoG:
+
+\begin{itemize}
+
+\item The \boat{Viking Spirit} surveyed 21 days from March \nth{11} to March \nth{31},
+
+\item The \boat{Ocean Cloud} surveyed 12 days from March \nth{9} to March \nth{20}, and
+
+\item Divers with A-Tlegay Fisheries Society surveyed 1 day on March \nth{7}.
+
+\begin{itemize}
+
+The first two dive vessels and the seine charter vessel \boat{Denman Isle} were funded by DFO,
+through a contract to the Herring Conservation Research Society.
+DFO mentored A-Tlegay Fisheries Society divers for the spawn survey protocol in 2017 and 2019;
+in 2022, these divers surveyed spawn through a contract with DFO.
+Additional sampling and sounding efforts conducted through the
+Industry Test Program were contributed in-kind by the Herring Industry.
