--- a/RegionalText/2022/WCVI/DataCollectionPrograms.tex
+++ b/RegionalText/2022/WCVI/DataCollectionPrograms.tex
@@ -1,1 +1,24 @@
-No observations for \thisYr{}.
+Biological samples were collected by the seine charter vessel \boat{Proud Canadian}
+for 20 days from February \nth{20} to March \nth{11}.
+The primary purpose of the test charter vessel was to
+collect biological samples from main bodies of herring from Statistical Areas 23, 24, and 25.
+Nearshore herring samples were collected by the Nuu-chah-nulth staff as
+part of a sampling program and on-going collaboration between WCVI First Nations and DFO.
+These nearshore biological samples were collected from spawning aggregations using cast nets.
+WCVI First Nations spawn reconnaissance charters reported spawn activity in all three areas.
+Herring spawn locations were primarily identified with fixed-wing overflights conducted by
+DFO Resource Management area staff.
+Ten flights were conducted this season in March.
+
+Two dive charter vessels operated in WCVI:
+
+\begin{itemize}
+
+\item The \boat{Pachena No.1} surveyed 15 days from March \nth{9} to March \nth{23}, and
+
+\item The \boat{Seaveyor} surveyed 12 days from March \nth{11} to April \nth{3}.
+
+\end{itemize}
+
+The seine test charter vessel and the dive survey vessels were funded by DFO,
+through a contract to the Herring Conservation Research Society.
