--- a/RegionalText/2022/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2022/SoG/DataCollectionPrograms.tex
@@ -20,7 +20,7 @@ Four dive charter vessels operated in the SoG:
 
 \item Divers with A-Tlegay Fisheries Society surveyed 1 day on March \nth{7}.
 
-\begin{itemize}
+\end{itemize}
 
 The first two dive vessels and the seine charter vessel \boat{Denman Isle} were funded by DFO,
 through a contract to the Herring Conservation Research Society.
