--- a/RegionalText/2022/HG/GeneralObservations.tex
+++ b/RegionalText/2022/HG/GeneralObservations.tex
@@ -20,8 +20,11 @@ and Sea Lions were present than in 2021.
 they were very focused on the limited number of pre-spawning aggregations,
 which limited test setting opportunities.
 
-\item All observed spawns in the major area were assessed by dive and
-independent video assessments of 87 duplicate transects
-were also completed by the recon vessel to help calibrate the two methodologies.
+\item All observed spawns in the major area were assessed by dive.
+Independent surface assessments were performed in 87
+duplicate transects by the reconnaisance vessel.
+Video assessments were performed on three transects.
+Both the surface and video assessment methodologies were compared
+to diver collected data to assess overlaps, similarities, and differences.
 
 \end{itemize}
