--- a/RegionalText/2022/PRD/GeneralObservations.tex
+++ b/RegionalText/2022/PRD/GeneralObservations.tex
@@ -1,4 +1,4 @@
-Big Bay:
+Area 4:
 
 \begin{itemize}
 
@@ -20,7 +20,7 @@ Spawning occurred slowly over the season opposed to the warmer sea temperatures 
 
 \end{itemize}
 
-Non-Big Bay:
+Area 5:
 
 \begin{itemize}
 
