List PRD observations by Area

--- a/RegionalText/2022/PRD/GeneralObservations.tex
+++ b/RegionalText/2022/PRD/GeneralObservations.tex
@@ -1,4 +1,6 @@
-Area 4:
+\begin{itemize}
+
+\item{Area 4}
 
 \begin{itemize}
 
@@ -20,7 +22,7 @@ Spawning occurred slowly over the season opposed to the warmer sea temperatures 
 
 \end{itemize}
 
-Area 5:
+\item{Area 5}
 
 \begin{itemize}
 
@@ -38,5 +40,7 @@ Fish appeared longer and larger in the test sets than in recent years.
 throughout the inlet and along the outside from Cape George towards Oval Point.
 
 \item Reports of reduced kelp coverage throughout the area.
+
+\end{itemize}
 
 \end{itemize}
