--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -51,14 +51,14 @@
 \newcommand{\plusGroup}{The age-\Sexpr{max(ageRange)} class is a `plus group' which includes fish ages \Sexpr{max(ageRange)} and older.}
 \newcommand{\spawnIndex}{The `spawn index' is not scaled by the spawn survey scaling parameter, $q$.}
 \newcommand{\trendLine}{The thick black line is a \Sexpr{smLine} curve, and the shaded area is the \Sexpr{ciLevel*100}\% confidence interval.}
-\newcommand{\qPeriods}{The spawn index has two distinct periods defined by the dominant coastwide survey method: surface surveys (\Sexpr{qYrs$q1}), and dive surveys (\Sexpr{qYrs$q2}).}
+\newcommand{\qPeriods}{The spawn index has two distinct periods defined by the dominant survey method: surface surveys (\Sexpr{qYrs$q1}), and dive surveys (\Sexpr{qYrs$q2}).}
 \newcommand{\legendNear}{Legend: `Nearshore' refers to samples collected using cast nets as part of a pilot study with First Nations.}
 \newcommand{\legendGear}{Legend: `Other' represents the reduction (\Sexpr{min(yrRange)} to \Sexpr{lastRedYr} only), the food and bait, as well as the special use fishery; `RoeSN' represents the roe seine fishery; and `RoeGN' represents the roe gillnet fishery.}
 \newcommand{\darkThisYr}{The year \thisYr{} has a darker bar to facilitate interpretation.}
 \newcommand{\withPrivacy}[1]{Note: data may be withheld due to privacy concerns (#1).}
 \newcommand{\noSOK}{Data from the spawn-on-kelp (SOK) fishery are not included.}
 \newcommand{\spawnIndexTechReport}{See the \href{https://github.com/grinnellm/SpawnIndex/blob/master/tr/Draft.pdf}{draft spawn index technical report} for calculations to convert SOK harvest to spawning biomass.}
-\newcommand{\missingSpawn}[1]{Missing spawn index values (#1) indicate incomplete spawn surveys.}
+\newcommand{\missingSpawn}[1]{Missing spawn index values indicate incomplete surveys (#1).}
 \newcommand{\spawnTypes}{There are three types of spawn survey observations: observations of spawn taken from the surface usually at low tide, underwater observations of spawn on giant kelp, Macrocystis (\emph{Macrocystis} spp.), and underwater observations of spawn on other types of algae and the substrate, which we refer to as `understory.'}
 \newcommand{\pctChange}[1]{Percent change is $\delta_t=\frac{\alpha_t - \alpha_{t-1}}{\alpha_{t-1}}$ where $\alpha_t$ is the #1 in year $t$.}
 \newcommand{\spawnSurfDive}{Note that spawn surveys in the dive survey period (\Sexpr{qYrs$q2}) are a combination of surface and dive surveys (Figures \ref{figSpawnIndexType} and \ref{figSpawnTypeProp}).}
