--- a/RegionalText/2022/A27/DataCollectionPrograms.tex
+++ b/RegionalText/2022/A27/DataCollectionPrograms.tex
@@ -1,3 +1,3 @@
 No survey due to spawn timing and weather.
-However, we have acquired satellite images
-for spawn in Klaskish March \nth{4} to \nth{7}.
+However, DFO acquired satellite images that appear to show
+spawn in Klaskish from March \nth{4} to \nth{7}.
