--- a/RegionalText/2022/PRD/GeneralObservations.tex
+++ b/RegionalText/2022/PRD/GeneralObservations.tex
@@ -6,8 +6,8 @@
 
 \item Sea surface temperatures were cold at 4$^\circ\text{C}$.
 
-\item With the colder sea surface temperatures the herring were holding and
-behaving in a manner that I haven't seen in twenty years.
+\item With the colder sea surface temperatures, herring were holding and
+behaving in a manner which has not been observed in recent years.
 
 \item Kelp was more abundant from Tree Bluff south to Duncan Bay. 
 
