--- a/RegionalText/2022/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2022/SoG/DataCollectionPrograms.tex
@@ -10,15 +10,17 @@ Herring spawn locations were primarily identified with fixed-wing overflights
 conducted by DFO Resource Management and Science staff.
 Twelve flights were conducted this season, between February and March.
 
-Four dive charter vessels operated in the SoG:
+Four dive vessels operated in the SoG:
 
 \begin{itemize}
 
 \item The \boat{Viking Spirit} surveyed 21 days from March \nth{11} to March \nth{31},
 
-\item The \boat{Ocean Cloud} surveyed 12 days from March \nth{9} to March \nth{20}, and
+\item The \boat{Ocean Cloud} surveyed 12 days from March \nth{9} to March \nth{20},
 
-\item Divers with A-Tlegay Fisheries Society surveyed 1 day on March \nth{7}.
+\item Divers with A-Tlegay Fisheries Society surveyed 1 day on March \nth{7}, and
+
+\item DFO divers surveyed 1 day on March \nth{29}.
 
 \end{itemize}
 
